Added java docs to the code and altered the packages